--- a/devoctomy.Passchamp.Core.UnitTests/devoctomy.Passchamp.Core.UnitTests.csproj
+++ b/devoctomy.Passchamp.Core.UnitTests/devoctomy.Passchamp.Core.UnitTests.csproj
@@ -7,6 +7,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Data\TestInputFile1.txt" />
+    <None Remove="Data\TestOutputFile1.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Data\TestInputFile1.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\TestOutputFile1.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
     <PackageReference Include="Moq" Version="4.16.1" />
     <PackageReference Include="xunit" Version="2.4.1" />
