More test coverage. For loading graphs from json.

--- a/devoctomy.Passchamp.Core.UnitTests/devoctomy.Passchamp.Core.UnitTests.csproj
+++ b/devoctomy.Passchamp.Core.UnitTests/devoctomy.Passchamp.Core.UnitTests.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Data\complexgraph1.json" />
     <None Remove="Data\nodes1.json" />
     <None Remove="Data\nodes2.json" />
     <None Remove="Data\nodes3.json" />
@@ -26,6 +27,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Data\pins1.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\complexgraph1.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Data\TestInputFile1.txt">
