--- a/devoctomy.Passchamp.Core.UnitTests/devoctomy.Passchamp.Core.UnitTests.csproj
+++ b/devoctomy.Passchamp.Core.UnitTests/devoctomy.Passchamp.Core.UnitTests.csproj
@@ -14,6 +14,7 @@
     <None Remove="Data\pins1.json" />
     <None Remove="Data\TestInputFile1.txt" />
     <None Remove="Data\TestOutputFile1.txt" />
+    <None Remove="Output\DontDeleteMe.txt" />
   </ItemGroup>
 
   <ItemGroup>
@@ -36,6 +37,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Data\TestOutputFile1.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Output\DontDeleteMe.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
