--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -32,5 +32,4 @@ jobs:
       - name: Build
         run: dotnet build --configuration Release --no-restore
       - name: Test
-        run: dotnet test --no-restore --verbosity normal--filter "FullyQualifiedName~UnitTests" -p:CollectCoverage=true -p:CoverletOutputFormat="json%2copencover" -p:CoverletOutput="../coverage" -p:MergeWith="../coverage.json" -c Release --no-build devoctomy.Passchamp.sln
-- codecov -f "coverage.opencover.xml" -t 4f55f528-7e57-4619-b864-e10d93cc7226
+        run: dotnet test --no-restore --verbosity normal--filter "FullyQualifiedName~UnitTests" -p:CollectCoverage=true -p:CoverletOutputFormat="json%2copencover" -p:CoverletOutput="../coverage" -p:MergeWith="../coverage.json" -c Release --no-build devoctomy.Passchamp.sln - codecov -f "coverage.opencover.xml" -t 4f55f528-7e57-4619-b864-e10d93cc7226
