added code coverge

--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -33,3 +33,8 @@ jobs:
         run: dotnet build --configuration Release --no-restore
       - name: Test
         run: dotnet test --no-restore --verbosity normal --filter "FullyQualifiedName~UnitTests" -p:CollectCoverage=true -p:CoverletOutputFormat="json%2copencover" -p:CoverletOutput="../coverage" -p:MergeWith="../coverage.json" -c Release --no-build devoctomy.Passchamp.sln
+      - uses: codecov/codecov-action@v1
+        with:
+          files: coverage.opencover.xml
+          fail_ci_if_error: true # optional (default = false)
+          verbose: true # optional (default = false)
