--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -37,5 +37,6 @@ jobs:
         uses: codecov/codecov-action@v1
         with:
           files: coverage.opencover.xml
+          commit_parent: ${{ GITHUB_SHA }}
           fail_ci_if_error: true
           verbose: false
