Addws iteration count and bunch of pointless tweaks.

--- a/devoctomy.Passchamp.IntTests/devoctomy.Passchamp.IntTests.csproj
+++ b/devoctomy.Passchamp.IntTests/devoctomy.Passchamp.IntTests.csproj
@@ -11,9 +11,13 @@
 
   <ItemGroup>
     <None Remove="Data\DontDeleteMe.txt" />
+    <None Remove="Data\testdec.dat" />
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="Output\testdec.dat">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Output\DontDeleteMe.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
