--- a/devoctomy.Passchamp.Windows/devoctomy.Passchamp.Windows.csproj
+++ b/devoctomy.Passchamp.Windows/devoctomy.Passchamp.Windows.csproj
@@ -7,6 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Config\Graphs\encryptgraph1.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Config\Graphs\encryptgraph1.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
