--- a/devoctomy.Passchamp.Windows.UnitTests/devoctomy.Passchamp.Windows.UnitTests.csproj
+++ b/devoctomy.Passchamp.Windows.UnitTests/devoctomy.Passchamp.Windows.UnitTests.csproj
@@ -18,6 +18,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Xunit.StaFact" Version="1.0.37" />
   </ItemGroup>
 
   <ItemGroup>
