Started creating graph for testing decryption of legacy cachy default config.

--- a/devoctomy.Passchamp.Windows/devoctomy.Passchamp.Windows.csproj
+++ b/devoctomy.Passchamp.Windows/devoctomy.Passchamp.Windows.csproj
@@ -7,11 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Config\Graphs\cachydecrypttest1.json" />
     <None Remove="Config\Graphs\encryptgraph1.json" />
     <None Remove="Fonts\androidicons.ttf" />
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="Config\Graphs\cachydecrypttest1.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Config\Graphs\encryptgraph1.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
