--- a/devoctomy.Passchamp.Windows/devoctomy.Passchamp.Windows.csproj
+++ b/devoctomy.Passchamp.Windows/devoctomy.Passchamp.Windows.csproj
@@ -7,13 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Config\Graphs\cachydecrypttest1.json" />
+    <None Remove="Config\Graphs\cachydecryptdebug.json" />
     <None Remove="Config\Graphs\encryptgraph1.json" />
     <None Remove="Fonts\androidicons.ttf" />
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="Config\Graphs\cachydecrypttest1.json">
+    <Content Include="Config\Graphs\cachydecryptdebug.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Config\Graphs\encryptgraph1.json">
