--- a/devoctomy.Passchamp.SignTool.UnitTests/devoctomy.Passchamp.SignTool.UnitTests.csproj
+++ b/devoctomy.Passchamp.SignTool.UnitTests/devoctomy.Passchamp.SignTool.UnitTests.csproj
@@ -55,6 +55,10 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="coverlet.msbuild" Version="2.9.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
