--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -1,9 +1,7 @@
 name: Sonarcloud Analysis
 on:
-  workflow_dispatch:
-  pull_request:
-    branches: 
-      - main
+  push:
+    branches: [ "master", "main" ]
 
 jobs:
   validate-changes:
