--- a/devoctomy.Passchamp.SignTool/Properties/launchSettings.json
+++ b/devoctomy.Passchamp.SignTool/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "devoctomy.Passchamp.SignTool": {
       "commandName": "Project",
-      "commandLineArgs": "generate -v=true"
+      "commandLineArgs": "generate"
     }
   }
 }
