--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -31,9 +31,12 @@ jobs:
           fail_ci_if_error: true
           verbose: false
       - name: Publish to s3 bucket
-        uses: shallwefootball/s3-upload-action@master
+        uses: jakejarvis/s3-sync-action@master
         with:
-          aws_key_id: ${{ secrets.AWS_KEY_ID }}
-          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
-          aws_bucket: ${{ secrets.AWS_BUCKET }}
-          source_dir: '/a/passchamp/passchamp/devoctomy.Passchamp.Client/bin'
+          args: --acl public-read --follow-symlinks --delete
+        env:
+          AWS_S3_BUCKET: ${{ secrets.AWS_BUCKET }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
+          AWS_REGION: 'eu-west-2'
+          SOURCE_DIR: '/a/passchamp/passchamp/devoctomy.Passchamp.Client/bin'
