--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -30,13 +30,8 @@ jobs:
           commit_parent: $(git rev-parse --short "$GITHUB_SHA")
           fail_ci_if_error: true
           verbose: false
-      - name: Publish to s3 bucket
-        uses: jakejarvis/s3-sync-action@master
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v3
         with:
-          args: --acl public-read --follow-symlinks --delete
-        env:
-          AWS_S3_BUCKET: ${{ secrets.AWS_BUCKET }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
-          AWS_REGION: 'eu-west-2'
-          SOURCE_DIR: '/a/passchamp/passchamp/devoctomy.Passchamp.Client/bin'
+          name: my-artifact
+          path: '/a/passchamp/passchamp/devoctomy.Passchamp.Client/bin/'
