--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -33,5 +33,5 @@ jobs:
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: my-artifact
+          name: Build
           path: '/a/passchamp/passchamp/devoctomy.Passchamp.Client/bin/'
