--- a/.github/workflows/cuibuild.yml
+++ b/.github/workflows/cuibuild.yml
@@ -19,10 +19,12 @@ env:
   DOTNET_NOLOGO: true                     # Disable the .NET logo
   DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true # Disable the .NET first time experience
   DOTNET_CLI_TELEMETRY_OPTOUT: true       # Disable sending .NET CLI telemetry
-  
-build-android:
+
+jobs:
+  build-android:
     runs-on: windows-2022
     name: Android Build
+
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -53,5 +55,4 @@ build-android:
         uses: actions/upload-artifact@v2.3.1
         with:
           name: android-ci-build
-          path: devoctomy.Passchamp.Client/bin/Release/net6.0-android/*Signed.a*  
-  
+          path: devoctomy.Passchamp.Client/bin/Release/net6.0-android/*Signed.a*
