--- a/.github/workflows/cuibuild.yml
+++ b/.github/workflows/cuibuild.yml
@@ -83,13 +83,13 @@ jobs:
         run: dotnet restore devoctomy.Passchamp.Client/devoctomy.Passchamp.Client.csproj
 
       - name: Build MAUI Windows
-        run: msbuild build devoctomy.Passchamp.Client/devoctomy.Passchamp.Client.csproj -r -p:Configuration=Release -p:RestorePackages=false -p:TargetFramework=net6.0-windows10.0.19041 /p:GenerateAppxPackageOnBuild=true
+        run: msbuild devoctomy.Passchamp.Client/devoctomy.Passchamp.Client.csproj -r -p:Configuration=Release -p:RestorePackages=false -p:TargetFramework=net6.0-windows10.0.19041 /p:GenerateAppxPackageOnBuild=true
 
       - name: Upload Windows Artifact
         uses: actions/upload-artifact@v2.3.1
         with:
           name: windows-ci-build
-          path: devoctomy.Passchamp.Client/bin/Release/net6.0-windows*/**/MauiBeach*.msix
+          path: devoctomy.Passchamp.Client/bin/Release/net6.0-windows*/**/*.msix
 
   build-ios:
     runs-on: macos-11
@@ -120,3 +120,33 @@ jobs:
         with:
           name: ios-ci-build
           path: devoctomy.Passchamp.Client/bin/Release/net6.0-ios/**/*.app/
+          
+  build-mac:
+    runs-on: macos-11
+    name: MacCatalyst Build
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Setup .NET 6
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: 6.0.x
+          include-prerelease: true
+
+      - name: Install MAUI Workloads
+        run: |
+          dotnet workload install maccatalyst --ignore-failed-sources
+          dotnet workload install maui --ignore-failed-sources
+
+      - name: Restore Dependencies
+        run: dotnet restore devoctomy.Passchamp.Client/devoctomy.Passchamp.Client.csproj
+
+      - name: Build MAUI MacCatalyst
+        run: dotnet build devoctomy.Passchamp.Client/devoctomy.Passchamp.Client.csproj -c Release -f net6.0-maccatalyst --no-restore
+
+      - name: Upload MacCatalyst Artifact
+        uses: actions/upload-artifact@v2.3.1
+        with:
+          name: macos-ci-build
+          path: devoctomy.Passchamp.Client/bin/Release/net6.0-maccatalyst/**/*.app/          
