--- a/devoctomy.Passchamp.SignTool/devoctomy.Passchamp.SignTool.csproj
+++ b/devoctomy.Passchamp.SignTool/devoctomy.Passchamp.SignTool.csproj
@@ -4,7 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
     <LangVersion>8.0</LangVersion>
-	<PublishTrimmed>false</PublishTrimmed>
+	<PublishTrimmed>true</PublishTrimmed>
   </PropertyGroup>
 
   <ItemGroup>
