--- a/devoctomy.Passchamp.SignTool/devoctomy.Passchamp.SignTool.csproj
+++ b/devoctomy.Passchamp.SignTool/devoctomy.Passchamp.SignTool.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
+	<TargetFramework Condition="'$(BuildWindowsOnly)' == 'true'">net6.0-windows10.0.19041</TargetFramework>
     <LangVersion>8.0</LangVersion>
 	<PublishTrimmed>true</PublishTrimmed>
   </PropertyGroup>
