--- a/.github/workflows/cuibuild.yml
+++ b/.github/workflows/cuibuild.yml
@@ -83,7 +83,7 @@ jobs:
         run: dotnet restore devoctomy.Passchamp.Client/devoctomy.Passchamp.Client.csproj
 
       - name: Build MAUI Windows
-        run: msbuild devoctomy.Passchamp.Client/devoctomy.Passchamp.Client.csproj -r -p:BuildWindowsOnly=true -p:Configuration=Release -p:RestorePackages=false -p:TargetFramework=net6.0-windows10.0.19041 /p:GenerateAppxPackageOnBuild=true
+        run: dotnet build devoctomy.Passchamp.Client/devoctomy.Passchamp.Client.csproj -c Release -f net6.0-windows10.0.19041 --no-restore
 
       - name: Upload Windows Artifact
         uses: actions/upload-artifact@v2.3.1
