--- a/devoctomy.Passchamp.Client/devoctomy.Passchamp.Client.csproj
+++ b/devoctomy.Passchamp.Client/devoctomy.Passchamp.Client.csproj
@@ -8,6 +8,7 @@
 		<UseMaui>true</UseMaui>
 		<SingleProject>true</SingleProject>
 		<ImplicitUsings>enable</ImplicitUsings>
+		<PublishTrimmed Condition="'$(TargetFrameworks)' == 'net6.0-ios'">false</PublishTrimmed>
 
 		<!-- Display name -->
 		<ApplicationTitle>devoctomy.Passchamp.Client</ApplicationTitle>
