--- a/.github/workflows/cuibuild.yml
+++ b/.github/workflows/cuibuild.yml
@@ -21,6 +21,36 @@ env:
   DOTNET_CLI_TELEMETRY_OPTOUT: true       # Disable sending .NET CLI telemetry
 
 jobs:
+
+  unit-tests:
+    runs-on: windows-2022
+    name: Unit Tests
+    
+    strategy:
+      matrix:
+        dotnet-version: [ '6.0.x' ]
+    steps:
+      - uses: actions/checkout@v3
+      - name: Setup .NET Core SDK ${{ matrix.dotnet-version }}
+        uses: actions/setup-dotnet@v2
+        with:
+          dotnet-version: ${{ matrix.dotnet-version }}
+      - name: Install maui workloads
+        run: dotnet workload install maui-android maui-ios maui-maccatalyst
+      - name: Install dependencies
+        run: dotnet restore --source https://api.nuget.org/v3/index.json 
+      - name: Build
+        run: dotnet build --configuration Release --no-restore
+      - name: Test
+        run: dotnet test --no-restore --verbosity normal --filter "FullyQualifiedName~UnitTests" -p:CollectCoverage=true -p:CoverletOutputFormat="json%2copencover" -p:CoverletOutput="../coverage" -p:MergeWith="../coverage.json" -c Release --no-build devoctomy.Passchamp.sln
+      - name: Code Coverage
+        uses: codecov/codecov-action@v1
+        with:
+          files: coverage.opencover.xml
+          commit_parent: $(git rev-parse --short "$GITHUB_SHA")
+          fail_ci_if_error: true
+          verbose: false
+
   build-android:
     runs-on: windows-2022
     name: Android Build
