--- a/.github/workflows/cuibuild.yml
+++ b/.github/workflows/cuibuild.yml
@@ -32,6 +32,8 @@ jobs:
         uses: actions/setup-dotnet@v2
         with:
           dotnet-version: 6.0.x
+      - name: Install maui workloads
+        run: dotnet workload install maui-android
       - name: Install dependencies
         run: dotnet restore --source https://api.nuget.org/v3/index.json 
       - name: Test
