--- a/.github/workflows/cuibuild.yml
+++ b/.github/workflows/cuibuild.yml
@@ -33,7 +33,7 @@ jobs:
         with:
           dotnet-version: 6.0.x
       - name: Install maui workloads
-        run: dotnet workload install maui-android
+        run: dotnet workload install maui-android maui-ios maui-maccatalyst
       - name: Install dependencies
         run: dotnet restore --source https://api.nuget.org/v3/index.json 
       - name: Test
