--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,4 +1,4 @@
-name: Unit Tests & Code Coverage
+name: CICD
 
 on:
   push:
@@ -178,12 +178,14 @@ jobs:
 
       - name: Build MAUI iOS
         run: dotnet build devoctomy.Passchamp.Client/devoctomy.Passchamp.Client.csproj -c Release -f net6.0-ios --no-restore
+        continue-on-error: true
 
       - name: Upload iOS Artifact
         uses: actions/upload-artifact@v2.3.1
         with:
           name: ios-ci-build
           path: devoctomy.Passchamp.Client/bin/Release/net6.0-ios/**/*.app/
+        continue-on-error: true
 
   build-mac:
     name: MacCatalyst Build
