--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -23,7 +23,7 @@ env:
 jobs:
 
   tests:
-    name: Tests
+    name: Build & Tests
     runs-on: windows-2022
     
     steps:
@@ -101,13 +101,12 @@ jobs:
       - name: Install MAUI Workloads
         run: |
           dotnet workload install maui --ignore-failed-sources
-
       - name: Restore Dependencies
         run: dotnet restore devoctomy.Passchamp.Client/devoctomy.Passchamp.Client.csproj
-
       - name: Build MAUI Windows
         run: dotnet build devoctomy.Passchamp.Client/devoctomy.Passchamp.Client.csproj -c Release -f net6.0-windows10.0.19041.0 --no-restore
-
+      - name: Publish application
+        run: dotnet publish devoctomy.Passchamp.Client/devoctomy.Passchamp.Client.csproj -c Release -f net6.0-windows10.0.19041.0
       - name: Upload Windows Artifact
         uses: actions/upload-artifact@v2.3.1
         with:
