created maui class library but cannot unit test as yet.

--- a/devoctomy.Passchamp.Core.UnitTests/devoctomy.Passchamp.Core.UnitTests.csproj
+++ b/devoctomy.Passchamp.Core.UnitTests/devoctomy.Passchamp.Core.UnitTests.csproj
@@ -72,7 +72,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\devoctomy.Passchamp.Core\devoctomy.Passchamp.Core.csproj" />
+    <ProjectReference Include="..\devoctomy.Passchamp.Core\devoctomy.Passchamp.Core.csproj">
+      <Private></Private>
+    </ProjectReference>
   </ItemGroup>
 
 </Project>
