Lots of shifting about, changing of namespaces and restructuring.  Also some additional work to cloud config loading.

--- a/devoctomy.Passchamp.Maui.UnitTests/devoctomy.Passchamp.Maui.UnitTests.csproj
+++ b/devoctomy.Passchamp.Maui.UnitTests/devoctomy.Passchamp.Maui.UnitTests.csproj
@@ -30,4 +30,8 @@
   <ItemGroup>
     <ProjectReference Include="..\devoctomy.Passchamp.Maui\devoctomy.Passchamp.Maui.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
 </Project>
