--- a/devoctomy.Passchamp.Maui.UnitTests/devoctomy.Passchamp.Maui.UnitTests.csproj
+++ b/devoctomy.Passchamp.Maui.UnitTests/devoctomy.Passchamp.Maui.UnitTests.csproj
@@ -9,6 +9,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Services\**" />
+    <EmbeddedResource Remove="Services\**" />
+    <MauiCss Remove="Services\**" />
+    <MauiXaml Remove="Services\**" />
+    <None Remove="Services\**" />
+  </ItemGroup>
+
+  <ItemGroup>
 	  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
 	  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
 	  <PackageReference Include="Moq" Version="4.16.1" />
@@ -29,9 +37,5 @@
 
   <ItemGroup>
     <ProjectReference Include="..\devoctomy.Passchamp.Maui\devoctomy.Passchamp.Maui.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Services\" />
   </ItemGroup>
 </Project>
