--- a/devoctomy.Passchamp.SignTool.UnitTests/devoctomy.Passchamp.SignTool.UnitTests.csproj
+++ b/devoctomy.Passchamp.SignTool.UnitTests/devoctomy.Passchamp.SignTool.UnitTests.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.21.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
     <PackageReference Include="Moq" Version="4.16.1" />
     <PackageReference Include="xunit" Version="2.4.1" />
