--- a/devoctomy.Passchamp.Core/devoctomy.Passchamp.Core.csproj
+++ b/devoctomy.Passchamp.Core/devoctomy.Passchamp.Core.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+	<CodeAnalysisRuleSet>../CodeAnalysis.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
 
   <ItemGroup>
