Started building out cloud provider loading and simple CRUD.

--- a/devoctomy.Passchamp.Client/devoctomy.Passchamp.Client.csproj
+++ b/devoctomy.Passchamp.Client/devoctomy.Passchamp.Client.csproj
@@ -54,6 +54,7 @@
 
 	<ItemGroup>
 	  <ProjectReference Include="..\devoctomy.Passchamp.Core\devoctomy.Passchamp.Core.csproj" />
+	  <ProjectReference Include="..\devoctomy.Passchamp.Maui\devoctomy.Passchamp.Maui.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
