--- a/devoctomy.Passchamp.Core/devoctomy.Passchamp.Core.csproj
+++ b/devoctomy.Passchamp.Core/devoctomy.Passchamp.Core.csproj
@@ -7,9 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AWSSDK.S3" Version="3.5.0-beta" />
+    <PackageReference Include="AWSSDK.S3" Version="3.7.9.39" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.2-beta1" />
   </ItemGroup>
 
 </Project>
