--- a/devoctomy.Passchamp.Client/devoctomy.Passchamp.Client.csproj
+++ b/devoctomy.Passchamp.Client/devoctomy.Passchamp.Client.csproj
@@ -58,6 +58,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <Compile Update="Pages\VaultEditorPage.xaml.cs">
+	    <DependentUpon>VaultEditorPage.xaml</DependentUpon>
+	  </Compile>
 	  <Compile Update="Pages\VaultsPage.xaml.cs">
 	    <DependentUpon>VaultsPage.xaml</DependentUpon>
 	  </Compile>
@@ -65,6 +68,9 @@
 
 	<ItemGroup>
 	  <MauiXaml Update="Pages\AboutPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Pages\VaultEditorPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Pages\CloudStorageProviderEditorPage.xaml">
