--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -35,7 +35,7 @@ jobs:
         with:
           dotnet-version: 8.0.x
       - name: Install maui workloads
-        run: dotnet workload install maui-android maui-ios maui-maccatalyst
+        run: dotnet workload install maui-android
       - name: Install dependencies
         run: dotnet restore --source https://api.nuget.org/v3/index.json 
       - name: Build
