--- a/devoctomy.Passchamp.Maui.UnitTests/devoctomy.Passchamp.Maui.UnitTests.csproj
+++ b/devoctomy.Passchamp.Maui.UnitTests/devoctomy.Passchamp.Maui.UnitTests.csproj
@@ -17,12 +17,12 @@
   </ItemGroup>
 
   <ItemGroup>
-	  <PackageReference Include="Microsoft.Maui.Controls" Version="8.0.3" />
+	  <PackageReference Include="Microsoft.Maui.Controls" Version="8.0.6" />
 	  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
 	  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
-	  <PackageReference Include="Moq" Version="4.20.69" />
-	  <PackageReference Include="xunit" Version="2.6.2" />
-	  <PackageReference Include="xunit.runner.visualstudio" Version="2.5.4">
+	  <PackageReference Include="Moq" Version="4.20.70" />
+	  <PackageReference Include="xunit" Version="2.6.6" />
+	  <PackageReference Include="xunit.runner.visualstudio" Version="2.5.6">
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		  <PrivateAssets>all</PrivateAssets>
 	  </PackageReference>
@@ -38,5 +38,9 @@
 
   <ItemGroup>
     <ProjectReference Include="..\devoctomy.Passchamp.Maui\devoctomy.Passchamp.Maui.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="Microsoft.Maui.Controls.Compatibility" Version="8.0.6" />
   </ItemGroup>
 </Project>
