--- a/devoctomy.Passchamp.Maui/devoctomy.Passchamp.Maui.csproj
+++ b/devoctomy.Passchamp.Maui/devoctomy.Passchamp.Maui.csproj
@@ -21,8 +21,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-	  <PackageReference Include="Microsoft.Maui.Controls" Version="8.0.6" />
+	  <PackageReference Include="Microsoft.Maui.Controls" Version="8.0.6">
+	    <TreatAsUsed>true</TreatAsUsed>
+	  </PackageReference>
 	</ItemGroup>
 
 	<ItemGroup>
