chore: started refactoring page hierachy  to allow for different page types.

--- a/devoctomy.Passchamp.Client/devoctomy.Passchamp.Client.csproj
+++ b/devoctomy.Passchamp.Client/devoctomy.Passchamp.Client.csproj
@@ -84,6 +84,9 @@
 	  <MauiXaml Update="Pages\AboutPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Pages\TabbedPageTest.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Pages\ThemeTestPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
