chore: More small ui tweaks for vault creation. Also some viewmodel ioc refactoring.

--- a/devoctomy.Passchamp.Client/devoctomy.Passchamp.Client.csproj
+++ b/devoctomy.Passchamp.Client/devoctomy.Passchamp.Client.csproj
@@ -123,6 +123,9 @@
 	  <MauiXaml Update="Views\VaultInfoView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\VaultSyncView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 	<ItemGroup>
