--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -81,7 +81,7 @@ jobs:
           
   build-windows:
     name: Windows Build
-    needs: security-scan
+    needs: [tests, security-scan]
     runs-on: windows-2022
     if: always()
     
@@ -117,7 +117,7 @@ jobs:
 
   build-android:
     name: Android Build
-    needs: security-scan
+    needs: [tests, security-scan]
     runs-on: windows-2022
     if: always()
 
@@ -153,9 +153,9 @@ jobs:
           name: android-ci-build
           path: devoctomy.Passchamp.Client/bin/Release/net8.0-android/*Signed.a*
           
-  release:
-    name: Create Release and Upload Artifacts
-    needs: [build-windows, build-android]
+  release-windows:
+    name: Create Release and Upload Artifacts for Windows
+    needs: build-windows
     runs-on: ubuntu-latest
     if: ${{ github.event_name == 'push' }}
     steps:
@@ -166,7 +166,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ github.run_number }}
-          release_name: Release ${{ github.run_number }}
+          release_name: Windows Release ${{ github.run_number }}
           draft: ${{ github.ref != 'refs/heads/main' }}
           prerelease: false
 
@@ -174,11 +174,6 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: windows-ci-build
-
-      - name: Download Android Artifact
-        uses: actions/download-artifact@v2
-        with:
-          name: android-ci-build
 
       - name: Upload Windows Artifact to Release
         uses: actions/upload-release-asset@v1
@@ -190,6 +185,28 @@ jobs:
           asset_name: windows-ci-build.msix
           asset_content_type: application/vnd.ms-package
 
+  release-android:
+    name: Create Release and Upload Artifacts for Android
+    needs: build-android
+    runs-on: ubuntu-latest
+    if: ${{ github.event_name == 'push' }}
+    steps:
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.run_number }}
+          release_name: Android Release ${{ github.run_number }}
+          draft: ${{ github.ref != 'refs/heads/main' }}
+          prerelease: false
+
+      - name: Download Android Artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: android-ci-build
+
       - name: Upload Android Artifact to Release
         uses: actions/upload-release-asset@v1
         env:
@@ -199,4 +216,3 @@ jobs:
           asset_path: ./android-ci-build/*Signed.apk
           asset_name: android-ci-build.apk
           asset_content_type: application/vnd.android.package-archive
-
